<resources>
    <string name="app_name">When to Run</string>
    <string name="update">Update</string>
    <string name="weatherImage">Weather Icon</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- App texts -->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_title">About this app</string>
    <string name="app_description">This application allows its users to set weather conditions in         which the user feels comfortable to do sport outdoors. It prevents sunstroke and other health         problems that can be caused by weather conditions.</string>
    <string name="about_author">About the author</string>
    <string name="githublogo" translatable="false">GitHubLogo</string>
    <string name="name_author">David Cristóbal</string>
    
    <!-- Weather nouns -->
    <string name="enable_rain">Enable rain running</string>
    <string name="min_temp">Min. temperature (ºC)</string>
    <string name="max_temp">Max. temperature (ºC)</string>
    <string name="max_wind">Max. wind speed (km/h)</string>
    <string name="main_settings">Main Settings</string>
    <string name="updated">Updated!!</string>
    <string name="reset">Reset</string>
    <string name="locale_settings">Locale Settings</string>
    <string name="language_selector">Language selector</string>
    <string name="english">English</string>
    <string name="version">version: </string>

    <!-- Weather conditions -->
    <string name="thunderstorm">Thunderstorm</string>
    <string name="drizzle">Drizzle</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="mist">Mist</string>
    <string name="smoke">Smoke</string>
    <string name="haze">Haze</string>
    <string name="dust">Dust</string>
    <string name="fog">Fog</string>
    <string name="sand">Sand</string>
    <string name="ash">Ash</string>
    <string name="squall">Squall</string>
    <string name="tornado">Tornado</string>
    <string name="clear">Clear</string>
    <string name="clouds">Clouds</string>

</resources>